(fix) card 284, zendesk tickets, images were not responsive and did not adjust to container width

--- a/assets/css/common/common.scss
+++ b/assets/css/common/common.scss
@@ -202,6 +202,11 @@ body.page .main-content article {
   }
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .alignnone {
   display: block;
   margin: 0px $gutterHalf $gutterHalf 0px;
@@ -218,8 +223,6 @@ body.page .main-content article {
 }
 
 .aligncenter {
-  max-width: 100%;
-  height: auto;
   display: block;
   margin: 0 auto $gutter auto;
   clear: both;
